enoca_backend_challenge_soru5/src/main/java/com/example/enoca_backend_challenge_soru5/error/CustomerDatebaseException.java
package com.example.enoca_backend_challenge_soru5.error;

public class CustomerDatebaseException extends RuntimeException{
    public CustomerDatebaseException() {
        super("Something gone wrong!!!");
    }
}
